lowered min_seq_count for the demo

--- a/prost.config
+++ b/prost.config
@@ -17,15 +17,17 @@ species: dre
 
 # The minimum number times a sequence must appear as a read in the samples
 # datasets in order to be included.
-# min_seq_count: 30
+# 
+# Set this low for the demo.
+min_seq_count: 5
 
 # A sequence must have at least min_seq_length basepairs in order to be
 # included by Prost!
-# min_seq_length: 14
+min_seq_length: 17
 
 # A sequence must have at most max_seq_length basepairs in order to be
 # included by Prost!
-# max_seq_length: 28
+max_seq_length: 25
 
 # The maximum genetic wiggle.
 # wiggle: 5
