--- a/prost.config
+++ b/prost.config
@@ -64,7 +64,7 @@ max_threads: 4
 [GenomeAlignment]
 name: genome
 tool: bbmap
-db: BBMap/Danio_rerio.Zv9.dna.toplevel
+db: BBMap/Danio_rerio.GRCz10.dna.toplevel
 max_3p_mismatches: 3
 max_non_3p_mismatches: 2
 allow_indels: yes
