--- a/prost.config
+++ b/prost.config
@@ -6,14 +6,11 @@ species: dre
 # The file containing the list of samples files.
 # samples_filelist: samples_filelist
 
-# Skip all sequence alignments.
-# skip_sequence_alignments: no
+# The maximum number of threads (processors) to use for various operations.
+max_threads: 4
 
-# Skip the genome sequence alignment.
-# skip_genome_alignment: no
-
-# Skip the annotation sequence alignments.
-# skip_annotation_alignments: no
+# The prefix to use for Prost! output filenames.
+# output_file_prefix: prost_output
 
 # The minimum number times a sequence must appear as a read in the samples
 # datasets in order to be included.
@@ -32,15 +29,40 @@ max_seq_length: 25
 # The maximum genetic wiggle.
 # wiggle: 5
 
-# The maximum number of threads (processors) to use for various operations.
-max_threads: 4
-
-# The maximum number of genetic locations to report per sequence (if exceeded,
+# The maximum number of genomic locations to report per sequence (if exceeded,
 # it is simply reported as TML (too many locations).
 # max_locations_to_report: 20
 
-# The prefix to use for Prost! output filenames.
-# output_file_prefix: prost_output
+# The maximum number of genomic locations allowed per sequence.  If exceeded
+# for a given sequence, only the number of genomic locations is preserved,
+# while the actual locations are erased, and the sequence is not binned (i.e.
+# it is only included in the isomiRs or no_genomic_hits tab).  Reported as
+# "MLAE" (maximum locations allowed exceeded).  This may help reduce Prost!
+# memory consumption in some data sets. Note that any sequence marked as
+# MLAE will *not* be included when calculating normalization in the
+# by_genomic_location tab.
+# max_locations_allowed: 2000000000
+
+# Skip all sequence alignments.
+# skip_sequence_alignments: no
+
+# Skip the genome sequence alignment.
+# skip_genome_alignment: no
+
+# Skip the annotation sequence alignments.
+# skip_annotation_alignments: no
+
+# If the mature miR annotation file is given, then an extra column
+# "MainSeqMatchesAnnotationFile" is added to the compressed_by_annotation tab
+# in the Prost! output.  For a given AnnotationBin:
+#   a) if the Bin has multiple in-species mature miR annotations, then the
+#      column is marked "Multiple"
+#   b) if the Bin's MainSequence exactly matches the annotation file's
+#      annotated sequence, then the column is marked "Yes".
+#   c) if the Bin's MainSequence does not exactly match the annotation file's
+#      annotated sequence, then the column is marked "No".
+# This column helps users assess the quality of the annotation file used.
+mature_mir_annotation_fasta: BBMap/mature_miRBase21.fa
 
 # Note: This alignment exists for documentation purposes only.  It describes
 # how to configure the several [*Alignments] below.
@@ -61,6 +83,8 @@ max_threads: 4
 #       the number of non-3-prime mismatches in the alignment (Y); if Y is
 #       greater than max_non_3p_mismatches, the hit will be rejected. 
 
+# For the genome alignment, we recommend keeping the number of non-3-prime
+# mismatches to '2' (i.e. 5-prime mismatches and "core" mismatches).
 [GenomeAlignment]
 name: genome
 tool: bbmap
@@ -74,7 +98,7 @@ indelnt_penalty_multiplier: 3
 type: MirbaseMirAnnotation
 name: matures
 tool: bbmap
-db: BBMap/mature_miRBase21
+db: BBMap/mature_miRBase21.fa
 max_3p_mismatches: 0
 max_non_3p_mismatches: 0
 allow_indels: no
@@ -83,7 +107,7 @@ allow_indels: no
 type: MirbaseHairpinAnnotation
 name: hairpins
 tool: bbmap
-db: BBMap/hairpin_miRBase21
+db: BBMap/hairpin_miRBase21.fa
 max_3p_mismatches: 0
 max_non_3p_mismatches: 0
 allow_indels: no
@@ -92,7 +116,7 @@ allow_indels: no
 type: BiomartOtherRNAAnnotation
 name: other
 tool: bbmap
-db: BBMap/BioMart_Dre79_otherRNA
+db: BBMap/BioMart_Dre79_otherRNA.fa
 max_3p_mismatches: 0
 max_non_3p_mismatches: 0
 allow_indels: no
