Fixed two tiny bugs.

--- a/prost.config
+++ b/prost.config
@@ -98,7 +98,7 @@ indelnt_penalty_multiplier: 3
 type: MirbaseMirAnnotation
 name: matures
 tool: bbmap
-db: BBMap/mature_miRBase21.fa
+db: fa/mature_miRBase21.fa
 max_3p_mismatches: 0
 max_non_3p_mismatches: 0
 allow_indels: no
@@ -107,7 +107,7 @@ allow_indels: no
 type: MirbaseHairpinAnnotation
 name: hairpins
 tool: bbmap
-db: BBMap/hairpin_miRBase21.fa
+db: fa/hairpin_miRBase21.fa
 max_3p_mismatches: 0
 max_non_3p_mismatches: 0
 allow_indels: no
@@ -116,7 +116,7 @@ allow_indels: no
 type: BiomartOtherRNAAnnotation
 name: other
 tool: bbmap
-db: BBMap/BioMart_Dre_otherRNA.fa
+db: fa/BioMart_Dre_otherRNA.fa
 max_3p_mismatches: 0
 max_non_3p_mismatches: 0
 allow_indels: no
