another tiny bugfix

--- a/prost.config
+++ b/prost.config
@@ -62,7 +62,7 @@ max_seq_length: 25
 #   c) if the Bin's MainSequence does not exactly match the annotation file's
 #      annotated sequence, then the column is marked "No".
 # This column helps users assess the quality of the annotation file used.
-mature_mir_annotation_fasta: BBMap/mature_miRBase21.fa
+mature_mir_annotation_fasta: fa/mature_miRBase21.fa
 
 # Note: This alignment exists for documentation purposes only.  It describes
 # how to configure the several [*Alignments] below.
